# sussy_ducky_bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  start.sh  start_no_download.sh
.github/workflows/: deploy.yml  rust.yml
caveman/: Modelfile
comfyui-rs/: Cargo.toml  README.md
comfyui-rs/src/: lib.rs
comfyui_nodes/: sdxl_turbo_api.json  stable_audio_api.json
custom_models/brainrot-llama3/: Modelfile
custom_models/caveman-llama3/: Modelfile
custom_models/caveman-mistral/: Modelfile
custom_models/furry-llama3/: Modelfile
custom_models/furry-mistral/: Modelfile
custom_models/greentext-mistral/: Modelfile
custom_models/polka/: Modelfile
custom_models/racist/: Modelfile
custom_models/racist-llama3/: Modelfile
custom_models/racist-mistral/: Modelfile
custom_models/tinystories/: Modelfile
migrations/: 20241219225732_create_messages_table.sql
src/: apis.rs  commands.rs  image_utils.rs  main.rs  markdown.rs  models.rs  ollama.rs  ratelimit.rs  structs.rs  utils.rs
src/apis/: bedrock.rs  chatlgbt.rs  fal.rs  groq.rs  httpcat.rs  huggingface.rs  mod.rs  openai.rs  openrouter.rs  petittube.rs  summarize.rs  together.rs
src/commands/: bedrock.rs  chatlgbt.rs  clone_img.rs  comfyui.rs  dalle.rs  fal.rs  goody.rs  groq.rs  help.rs  httpcat.rs  img.rs  llava.rs  mistral.rs  mod.rs  noviews.rs  ollama.rs  openai.rs  openrouter.rs  perplexity.rs  ping.rs  stable_audio.rs  start.rs  summarize.rs  tts.rs  vision.rs
