[package]
name = "sussy_ducky_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
fern = { version = "0.7.1", features = ["colored"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "migrate" ] }
dotenvy = "0.15.7"
serde = {features = ["derive"], version = "1.0.216"}
serde_json = "1.0.134"
chrono = "0.4.39"
reqwest = { version = "0.12.9" }
strum = { version = "0.26", features = ["derive"] }
openai-api-rs = "5.2.4"

[profile.dev.package.sqlx-macros]
opt-level = 3
