[package]
name = "sussy_ducky_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.14"
lambda_runtime = "0.13"
reqwest = { version = "0.12", features = [
    "multipart",
    "json",
    "rustls-tls",
    "stream",
], default-features = false }
serde = "1.0.217"
serde_json = "1.0.129"
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.13", features = ["macros", "rustls"], default-features = false }
anyhow = "1.0.89"
base64 = "0.22.1"
rand = "0.8.5"
futures = "0.3.31"
fern = { version = "0.7", features = ["colored"] }
log = "0.4.22"
chrono = "0.4.39"

[package.metadata.lambda.deploy]
memory = 128      # Function's memory
timeout = 60      # Function's execution timeout
# env_file = ".env" # File to load environment variables from. This has been disabled by default for github actions
